# libriff-X

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  example.c  makefile  riff.c  riff.cpp  riff.h  riff.hpp
examples/: example.c  example.cpp
src/: docs.h  riff.c  riff.cpp  riff.h  riff.hpp
